docs/api/qiskit/0.46/qiskit.pulse.instructions.Call.mdx
---
title: Call
description: API reference for qiskit.pulse.instructions.Call
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.pulse.instructions.Call
---

# Call

<Class id="qiskit.pulse.instructions.Call" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.46/qiskit/pulse/instructions/call.py" signature="qiskit.pulse.instructions.Call(subroutine, value_dict=None, name=None)">
  Bases: [`Instruction`](pulse#qiskit.pulse.instructions.Instruction "qiskit.pulse.instructions.instruction.Instruction")

  Pulse `Call` instruction.

  The `Call` instruction represents the calling of a referenced subroutine (schedule). It enables code reuse both within the pulse representation and hardware (if supported).

  Define new subroutine.

  <Admonition title="Note" type="note">
    Inline subroutine is mutable. This requires special care for modification.
  </Admonition>

  <Admonition title="Deprecated since version 0.25.0" type="danger">
    The class `qiskit.pulse.instructions.call.Call` is deprecated as of qiskit-terra 0.25.0. It will be removed in the Qiskit 1.0 release. Instead, use the pulse builder function qiskit.pulse.builder.call(subroutine) within an active building context.
  </Admonition>

  **Parameters**

  *   **subroutine** (*Union\[*[*Schedule*](qiskit.pulse.Schedule "qiskit.pulse.Schedule")*,* [*ScheduleBlock*](qiskit.pulse.ScheduleBlock "qiskit.pulse.ScheduleBlock")*]*) – A program subroutine to be referred to.
  *   **value\_dict** ([*Dict*](https://docs.python.org/3/library/typing.html#typing.Dict "(in Python v3.12)")*\[*[*ParameterExpression*](qiskit.circuit.ParameterExpression "qiskit.circuit.parameterexpression.ParameterExpression")*,* [*ParameterExpression*](qiskit.circuit.ParameterExpression "qiskit.circuit.parameterexpression.ParameterExpression")  *|*[*float*](https://docs.python.org/3/library/functions.html#float "(in Python v3.12)")*] | None*) – Mapping of parameter object to assigned value.
  *   **name** ([*str*](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.12)") *| None*) – Unique ID of this subroutine. If not provided, this is generated based on the subroutine name.

  **Raises**

  [**PulseError**](pulse#qiskit.pulse.PulseError "qiskit.pulse.PulseError") – If subroutine is not valid data format.

  ## Attributes

  ### arguments

  <Attribute id="qiskit.pulse.instructions.Call.arguments" name="arguments">
    Parameters dictionary to be assigned to subroutine.
  </Attribute>

  ### channels

  <Attribute id="qiskit.pulse.instructions.Call.channels" name="channels">
    Returns the channels that this schedule uses.
  </Attribute>

  ### duration

  <Attribute id="qiskit.pulse.instructions.Call.duration" name="duration">
    Duration of this instruction.
  </Attribute>

  ### id

  <Attribute id="qiskit.pulse.instructions.Call.id" name="id">
    Unique identifier for this instruction.
  </Attribute>

  ### instructions

  <Attribute id="qiskit.pulse.instructions.Call.instructions" name="instructions">
    Iterable for getting instructions from Schedule tree.
  </Attribute>

  ### name

  <Attribute id="qiskit.pulse.instructions.Call.name" name="name">
    Name of this instruction.
  </Attribute>

  ### operands

  <Attribute id="qiskit.pulse.instructions.Call.operands" name="operands">
    Return instruction operands.
  </Attribute>

  ### parameters

  <Attribute id="qiskit.pulse.instructions.Call.parameters" name="parameters">
    Unassigned parameters which determine the instruction behavior.
  </Attribute>

  ### prefix

  <Attribute id="qiskit.pulse.instructions.Call.prefix" name="prefix" attributeValue="= 'call'" />

  ### start\_time

  <Attribute id="qiskit.pulse.instructions.Call.start_time" name="start_time">
    Relative begin time of this instruction.
  </Attribute>

  ### stop\_time

  <Attribute id="qiskit.pulse.instructions.Call.stop_time" name="stop_time">
    Relative end time of this instruction.
  </Attribute>

  ### subroutine

  <Attribute id="qiskit.pulse.instructions.Call.subroutine" name="subroutine">
    Return attached subroutine.

    **Returns**

    The program referenced by the call.

    **Return type**

    program (Union\[[Schedule](qiskit.pulse.Schedule "qiskit.pulse.Schedule"), [ScheduleBlock](qiskit.pulse.ScheduleBlock "qiskit.pulse.ScheduleBlock")])
  </Attribute>

  ## Methods

  ### append

  <Function id="qiskit.pulse.instructions.Call.append" name="append" signature="append(schedule, name=None)">
    Return a new [`Schedule`](qiskit.pulse.Schedule "qiskit.pulse.Schedule") with `schedule` inserted at the maximum time over all channels shared between `self` and `schedule`.

    **Parameters**

    *   **schedule** (*Union\['Schedule', 'Instruction']*) – Schedule or instruction to be appended
    *   **name** ([*str*](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.12)") *| None*) – Name of the new schedule. Defaults to name of self

    **Returns**

    A new schedule with `schedule` a this instruction at t=0.

    **Return type**

    [Schedule](qiskit.pulse.Schedule "qiskit.pulse.Schedule")
  </Function>

  ### assigned\_subroutine

  <Function id="qiskit.pulse.instructions.Call.assigned_subroutine" name="assigned_subroutine" signature="assigned_subroutine()">
    Returns this subroutine with the parameters assigned.

    <Admonition title="Note" type="note">
      This function may be often called internally for class equality check despite its overhead of parameter assignment. The subroutine with parameter assigned is cached based on `.argument` hash. Once this argument is updated, new assigned instance will be returned. Note that this update is not mutable operation.
    </Admonition>

    **Returns**

    Attached program.

    **Return type**

    program (Union\[[Schedule](qiskit.pulse.Schedule "qiskit.pulse.Schedule"), [ScheduleBlock](qiskit.pulse.ScheduleBlock "qiskit.pulse.ScheduleBlock")])
  </Function>

  ### ch\_duration

  <Function id="qiskit.pulse.instructions.Call.ch_duration" name="ch_duration" signature="ch_duration(*channels)">
    Return duration of the supplied channels in this Instruction.

    **Parameters**

    **\*channels** ([*List*](https://docs.python.org/3/library/typing.html#typing.List "(in Python v3.12)")*\[*[*Channel*](pulse#qiskit.pulse.channels.Channel "qiskit.pulse.channels.Channel")*]*) – Supplied channels

    **Return type**

    [int](https://docs.python.org/3/library/functions.html#int "(in Python v3.12)")
  </Function>

  ### ch\_start\_time

  <Function id="qiskit.pulse.instructions.Call.ch_start_time" name="ch_start_time" signature="ch_start_time(*channels)">
    Return minimum start time for supplied channels.

    **Parameters**

    **\*channels** ([*List*](https://docs.python.org/3/library/typing.html#typing.List "(in Python v3.12)")*\[*[*Channel*](pulse#qiskit.pulse.channels.Channel "qiskit.pulse.channels.Channel")*]*) – Supplied channels

    **Return type**

    [int](https://docs.python.org/3/library/functions.html#int "(in Python v3.12)")
  </Function>

  ### ch\_stop\_time

  <Function id="qiskit.pulse.instructions.Call.ch_stop_time" name="ch_stop_time" signature="ch_stop_time(*channels)">
    Return maximum start time for supplied channels.

    **Parameters**

    **\*channels** ([*List*](https://docs.python.org/3/library/typing.html#typing.List "(in Python v3.12)")*\[*[*Channel*](pulse#qiskit.pulse.channels.Channel "qiskit.pulse.channels.Channel")*]*) – Supplied channels

    **Return type**

    [int](https://docs.python.org/3/library/functions.html#int "(in Python v3.12)")
  </Function>

  ### draw

  <Function id="qiskit.pulse.instructions.Call.draw" name="draw" signature="draw(dt=1, style=None, filename=None, interp_method=None, scale=1, plot_all=False, plot_range=None, interactive=False, table=True, label=False, framechange=True, channels=None)">
    Plot the instruction.

    <Admonition title="Deprecated since version 0.23.0" type="danger">
      The method `qiskit.pulse.instructions.instruction.Instruction.draw()` is deprecated as of qiskit-terra 0.23.0. It will be removed in the Qiskit 1.0 release. No direct alternative is being provided to drawing individual pulses. But, instructions can be visualized as part of a complete schedule using `qiskit.visualization.pulse_drawer`.
    </Admonition>

    **Parameters**

    *   **dt** ([*float*](https://docs.python.org/3/library/functions.html#float "(in Python v3.12)")) – Time interval of samples
    *   **style** (*Optional\[SchedStyle]*) – A style sheet to configure plot appearance
    *   **filename** ([*str*](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.12)") *| None*) – Name required to save pulse image
    *   **interp\_method** ([*Callable*](https://docs.python.org/3/library/typing.html#typing.Callable "(in Python v3.12)") *| None*) – A function for interpolation
    *   **scale** ([*float*](https://docs.python.org/3/library/functions.html#float "(in Python v3.12)")) – Relative visual scaling of waveform amplitudes
    *   **plot\_all** ([*bool*](https://docs.python.org/3/library/functions.html#bool "(in Python v3.12)")) – Plot empty channels
    *   **plot\_range** ([*Tuple*](https://docs.python.org/3/library/typing.html#typing.Tuple "(in Python v3.12)")*\[*[*float*](https://docs.python.org/3/library/functions.html#float "(in Python v3.12)")*] | None*) – A tuple of time range to plot
    *   **interactive** ([*bool*](https://docs.python.org/3/library/functions.html#bool "(in Python v3.12)")) – When set true show the circuit in a new window (this depends on the matplotlib backend being used supporting this)
    *   **table** ([*bool*](https://docs.python.org/3/library/functions.html#bool "(in Python v3.12)")) – Draw event table for supported instructions
    *   **label** ([*bool*](https://docs.python.org/3/library/functions.html#bool "(in Python v3.12)")) – Label individual instructions
    *   **framechange** ([*bool*](https://docs.python.org/3/library/functions.html#bool "(in Python v3.12)")) – Add framechange indicators
    *   **channels** ([*List*](https://docs.python.org/3/library/typing.html#typing.List "(in Python v3.12)")*\[*[*Channel*](pulse#qiskit.pulse.channels.Channel "qiskit.pulse.channels.Channel")*] | None*) – A list of channel names to plot

    **Returns**

    A matplotlib figure object of the pulse schedule

    **Return type**

    matplotlib.figure
  </Function>

  ### insert

  <Function id="qiskit.pulse.instructions.Call.insert" name="insert" signature="insert(start_time, schedule, name=None)">
    Return a new [`Schedule`](qiskit.pulse.Schedule "qiskit.pulse.Schedule") with `schedule` inserted within `self` at `start_time`.

    **Parameters**

    *   **start\_time** ([*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.12)")) – Time to insert the schedule schedule
    *   **schedule** (*Union\['Schedule', 'Instruction']*) – Schedule or instruction to insert
    *   **name** ([*str*](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.12)") *| None*) – Name of the new schedule. Defaults to name of self

    **Returns**

    A new schedule with `schedule` inserted with this instruction at t=0.

    **Return type**

    [Schedule](qiskit.pulse.Schedule "qiskit.pulse.Schedule")
  </Function>

  ### is\_parameterized

  <Function id="qiskit.pulse.instructions.Call.is_parameterized" name="is_parameterized" signature="is_parameterized()">
    Return True iff the instruction is parameterized.

    **Return type**

    [bool](https://docs.python.org/3/library/functions.html#bool "(in Python v3.12)")
  </Function>

  ### shift

  <Function id="qiskit.pulse.instructions.Call.shift" name="shift" signature="shift(time, name=None)">
    Return a new schedule shifted forward by time.

    **Parameters**

    *   **time** ([*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.12)")) – Time to shift by
    *   **name** ([*str*](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.12)") *| None*) – Name of the new schedule. Defaults to name of self

    **Returns**

    The shifted schedule.

    **Return type**

    [Schedule](qiskit.pulse.Schedule "qiskit.pulse.Schedule")
  </Function>
</Class>

